[package]
name = "plaintcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "1.0.1", features = ["net", "os-poll", "default", "os-ext"] }
env_logger = "0.11.5"
clap = { version = "4.5.14", features = ["derive"] }
bincode = "1.3.3"
serde = { version = "1.0.205", features = ["derive"] }
