[package]
name = "plaintcp"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[dependencies]
mio = { version = "1.0.1", features = ["net", "os-poll", "default", "os-ext"] }
env_logger = "0.11.5"
clap = { version = "4.5.14", features = ["derive"] }
bincode = "1.3.3"
serde = { version = "1.0.205", features = ["derive"] }
log = "0.4.22"
promkit = "0.4.5"
regex = "1.10.6"
rand = "0.8.5"
